# idmap-core

./: .env  .gitignore  Cargo.toml  README.md
client/: .env  Cargo.toml
client/src/: client.rs  main.rs
server/: .env  Cargo.toml
server/src/: helper.rs  keygen.rs  main.rs  server.rs
src/: config.rs  env_loader.rs  keygen.rs  lib.rs  sign.rs  transport.rs
