[workspace]
members = [
    ".", "client", "server",        # the root lib crate
]

[package]
name = "dkg_tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1.33", features = ["full"] }
givre = { version = "0.2.0", features = ["cggmp21-keygen", "ciphersuite-ed25519"] }
anyhow = "1.0.100"
round-based = "0.4.1"
sha2 = "0.10.9"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio-util = { version = "0.7.16", features = ["codec"]}
bytes = "1.10.1"
hex = "0.4.3"
