[workspace]
members = [
    ".", "client", "server",        # the root lib crate
]

[package]
name = "dkg_tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1.33", features = ["full"] }
givre = { version = "0.2.0", features = ["cggmp21-keygen", "ciphersuite-ed25519", "full-signing", "serde"] }
anyhow = "1.0.100"
round-based = "0.4.1"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio-util = { version = "0.7.16", features = ["codec"]}
bytes = "1.10.1"
hex = "0.4.3"
serde_json = "1.0.145"
bincode = "1.3"

solana-pubkey = "3.0.0"
solana-rpc-client = "3.0.8"
solana-instruction = "3.0.0"
solana-message = "3.0.1"
solana-program = "3.0.0"
dotenvy = "0.15.7"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }



