[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
dkg_tcp = { path = ".." }
tokio = { version = "1.33", features = ["full"] }
anyhow = "1.0.100"
hex = "0.4.3"
bs58 = "0.5.1"

solana-sdk = "3.0.0"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-rpc-client = "3.0.8"
solana-transaction = "3.0.1"

#kafka = "0.10.0"
#openssl = { version = "0.10", features = ["vendored"] }
#givre = { version = "0.2.0", features = ["cggmp21-keygen", "ciphersuite-ed25519", "full-signing", "serde"] }


