[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
dkg_tcp = { path = ".." }
tokio = { version = "1.33", features = ["full"] }
anyhow = "1.0.100"
hex = "0.4.3"
bs58 = "0.5.1"

solana-sdk = "3.0.0"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-rpc-client = "3.0.8"
solana-transaction = "3.0.1"

redis = { version = "0.32.7", features = ["tokio-comp", "aio"]}
serde_json = "1.0.145"
base64 = "0.22.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
futures = "0.3.31"
givre = { version = "0.2.0", features = ["cggmp21-keygen", "ciphersuite-ed25519", "full-signing", "serde"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
